--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: java
 
 after_success:
-  - mvn clean cobertura:cobertura coveralls:report
+#  - mvn clean cobertura:cobertura coveralls:report
+  - mvn clean install
